--- a/README
+++ b/README
@@ -1,20 +1,20 @@
 # 一个静态服务器工具
 
-## 安装
+## 安装(未上传到npm)
 
 ```
-npm i -g anydoor
+npm i -g openStatic
 ```
 
 ## 使用方法
 
 
 ```
-anydoor # 把当前文件夹作为当前静态资源服务器目录
+openStatic # 把当前文件夹作为当前静态资源服务器目录
 
-anydoor -p 8080 # 设置端口号为8080
+openStatic -p 8080 # 设置端口号为8080
 
-anydoor -h localhost # 设置host为localhost
+openStatic -h localhost # 设置host为localhost
 
-anydoor -d /usr # 设置根目录为 /usr
+openStatic -d /usr # 设置根目录为 /usr
 ```
